[gd_scene load_steps=18 format=3 uid="uid://cduiuhtkc03h8"]

[ext_resource type="Script" uid="uid://bxr7yj1yl710t" path="res://Prefabs/Player/Urlu.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://pl26cmw1v6uk" path="res://Prefabs/Player/Arrow.tscn" id="2_6ocgn"]
[ext_resource type="Texture2D" uid="uid://j0cy71ukh0pn" path="res://Assets/sprites/Urlu/urlu-sheet.png" id="3_6ocgn"]
[ext_resource type="Texture2D" uid="uid://baf7enqf8wsen" path="res://Assets/sprites/Urlu/UrluAttackTop.png" id="3_86q58"]
[ext_resource type="Texture2D" uid="uid://dh7ou6jwtft4o" path="res://Assets/sprites/Urlu/UrluAttackChal.png" id="4_6ocgn"]

[sub_resource type="Animation" id="1"]
resource_name = "Falling"
length = 0.1875
loop_mode = 1
step = 0.0625
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0625, 0.125),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [29, 30, 31]
}

[sub_resource type="Animation" id="Animation_1cl7s"]
resource_name = "Hanging"
length = 0.0625
step = 0.0625
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}

[sub_resource type="Animation" id="2"]
resource_name = "Idle"
length = 0.625
loop_mode = 1
step = 0.0625
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0625, 0.125, 0.1875, 0.25, 0.3125, 0.375, 0.4375, 0.5, 0.5625, 0.75, 0.875, 1, 1.125, 1.25, 1.375),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 1, 2, 3, 4, 5, 0]
}

[sub_resource type="Animation" id="3"]
length = 0.1875
loop_mode = 1
step = 0.0625
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0625, 0.125),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [26, 27, 28]
}

[sub_resource type="Animation" id="Animation_c4lgr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="4"]
length = 0.625
loop_mode = 1
step = 0.0625
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0625, 0.125, 0.1875, 0.25, 0.3125, 0.375, 0.4375, 0.5, 0.5625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23, 24, 25]
}

[sub_resource type="Animation" id="7"]
resource_name = "air"
length = 0.125
step = 0.0625
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0625),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [14, 15]
}

[sub_resource type="Animation" id="Animation_86q58"]
resource_name = "attack"
length = 0.0625
loop_mode = 1
step = 0.0625
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_6ocgn"]
resource_name = "Idle_Still"
loop_mode = 1
step = 0.0625
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dewec"]
_data = {
&"Falling": SubResource("1"),
&"Hanging": SubResource("Animation_1cl7s"),
&"Idle": SubResource("2"),
&"Idle_Still": SubResource("Animation_6ocgn"),
&"Jumping": SubResource("3"),
&"RESET": SubResource("Animation_c4lgr"),
&"Runing": SubResource("4"),
&"air": SubResource("7"),
&"attack": SubResource("Animation_86q58")
}

[sub_resource type="CapsuleShape2D" id="5"]
radius = 32.0
height = 128.0

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(64, 48)

[node name="Urlu" type="CharacterBody2D" groups=["Player"]]
collision_mask = 159
script = ExtResource("2")
SANITY_DRAIN_PASSIVE = 0.35
ARROW_PATH = ExtResource("2_6ocgn")

[node name="Camera2D(old)" type="Camera2D" parent="."]
visible = false
offset = Vector2(0, -256)
enabled = false
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.15
drag_top_margin = 0.8
drag_right_margin = 0.15
drag_bottom_margin = 0.0
editor_draw_drag_margin = true

[node name="Camera2D2" type="Camera2D" parent="."]
limit_top = 0
limit_bottom = 1080
drag_top_margin = 1.0
drag_bottom_margin = 1.0
editor_draw_drag_margin = true

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -55)
texture = ExtResource("3_6ocgn")
hframes = 8
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dewec")
}
autoplay = "Idle"

[node name="SpriteOverlay" type="Sprite2D" parent="."]
visible = false
position = Vector2(9, 13)
texture = ExtResource("3_86q58")
offset = Vector2(10, -52)

[node name="SpriteUnderlay" type="Sprite2D" parent="SpriteOverlay"]
show_behind_parent = true
position = Vector2(-28, -26)
texture = ExtResource("4_6ocgn")
offset = Vector2(6, 10)

[node name="BowOrigin" type="Node2D" parent="SpriteOverlay"]
position = Vector2(-9, -37)

[node name="CollisionShape2D_P" type="CollisionShape2D" parent="."]
shape = SubResource("5")

[node name="CollisionShape2D_S" type="CollisionShape2D" parent="."]
position = Vector2(0, 40)
shape = SubResource("6")
metadata/_edit_lock_ = true

[node name="RightWall" type="RayCast2D" parent="."]
position = Vector2(0, -24)
target_position = Vector2(48, 0)
collision_mask = 4
metadata/_edit_lock_ = true

[node name="LeftWall" type="RayCast2D" parent="."]
position = Vector2(0, -24)
target_position = Vector2(-48, 0)
collision_mask = 4
metadata/_edit_lock_ = true

[node name="MoonRayTop" type="RayCast2D" parent="."]
position = Vector2(0, -96)
target_position = Vector2(0, -50)
collision_mask = 2

[node name="MoonRayBottom" type="RayCast2D" parent="."]
position = Vector2(0, 24)
target_position = Vector2(0, -50)
collision_mask = 2

[node name="PlatformClipTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="PlatformClipTimer" to="." method="_on_platform_clip_timer_timeout"]
